# figma-taxonomy-gen

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml  taxonomy.config.yaml
.github/actions/drift-check/: action.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: ai-enrichment.md  amplitude.md  ci.md  cli-reference.md  configuration.md  cookbook.md  detection.md  getting-started.md  index.md  mcp.md
docs/superpowers/plans/: 2026-04-02-figma-taxonomy-gen-v01.md
docs/superpowers/specs/: 2026-04-02-figma-taxonomy-gen-v01-design.md
examples/banking-app/: taxonomy.csv  taxonomy.json  taxonomy.md
src/figma_taxonomy/: __init__.py  ai_enricher.py  amplitude_push.py  cli.py  config.py  extractor.py  figma_client.py  mcp_server.py  mcp_tools.py  models.py  taxonomy_engine.py  validate.py
src/figma_taxonomy/output/: __init__.py  amplitude_csv.py  excel.py  json_schema.py  markdown.py
tests/: conftest.py  test_ai_enricher.py  test_amplitude_push.py  test_cli.py  test_config.py  test_diff.py  test_extractor.py  test_mcp_tools.py  test_models.py  test_output.py  test_taxonomy_engine.py  test_validate.py
tests/fixtures/: banking_app.json
