[project]
name = "figma-taxonomy-gen"
version = "0.1.0"
description = "Extract interactive UI elements from Figma designs and generate Amplitude event taxonomies"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
ai = [
    "anthropic>=0.40",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
figma-taxonomy = "figma_taxonomy.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/figma_taxonomy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
